<resources>
    <string name="app_name">Lines 98</string>
    <string name="action_settings">Settings</string>
    <string name="About">About</string>
    <string name="Control">Game</string>
    <string name="SaveGame">Save Game</string>
    <string name="LoadGame">Load Game</string>
    <string name="EndGame">End Game</string>
    <string name="StepBack">Step back</string>
    <string name="New">New Game</string>
    <string name="Lines">Lines</string>
    <string name="Squares">Squares</string>
    <string name="Blocks">Blocks</string>
    <string name="Options">Options</string>
    <string name="HighScores">High Scores</string>
    <string name="DefaultGameType">Default game type:</string>
    <string name="next_ball_display_type">Next ball display type:</string>
    <string name="play_sounds">Play sounds:</string>
    <string name="destroy">Destroy</string>
    <string name="moving">Moving</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="jumping">Jumping</string>
    <string name="show_both">Both</string>
    <string name="show_on_field">On field</string>
    <string name="show_on_top">On top</string>
    <string name="dont_show">Don\'t show</string>
    <string name="Author">Oleg Buikin</string>
    <string name="VersionString">Version</string>
    <string name="AuthorString">Author</string>
    <string name="BasedOnProject">Based on the Trac Quang Hoa project</string>
    <string name="TracQuangHoaGit">https://github.com/hoaftq</string>
    <string name="clear_records">Clear High Scores</string>
    <string name="No">No</string>
    <string name="Yes">Yes</string>
    <string name="Date">Date</string>
    <string name="game_type">Game type</string>
    <string name="play_time">Play time</string>
    <string name="score">Score</string>
    <string name="Unknown">Unknown</string>
    <string name="cant_move">Can\'t move</string>
    <string name="SavedGames">Saved games</string>
    <string name="delete_save">Delete save</string>
    <string name="AutoSave">AutoSave</string>
    <string name="YuoHaveAutoSave">You have an autosave\nYou can load or delete it\nMenu->Game->Load</string>
</resources>