<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ru.ls.lines98.MainActivity">

    <item
        android:id="@+id/StepBack"
        android:icon="@drawable/ic_step_back"
        android:orderInCategory="100"
        android:title="@string/StepBack"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/New"
        android:orderInCategory="100"
        android:title="@string/New"
        app:showAsAction="never" >
        <menu>
            <item
                android:id="@+id/NewLinesGame"
                android:orderInCategory="100"
                android:title="@string/Lines"
                app:showAsAction="never" />
            <item
                android:id="@+id/NewSquaresGame"
                android:orderInCategory="100"
                android:title="@string/Squares"
                app:showAsAction="never" />
            <item
                android:id="@+id/NewBlocksGame"
                android:orderInCategory="100"
                android:title="@string/Blocks"
                app:showAsAction="never" />

        </menu>
    </item>
    <item
        android:id="@+id/GameControl"
        android:orderInCategory="100"
        android:title="@string/Control"
        app:showAsAction="never" >
        <menu>
            <item
                android:id="@+id/SaveGame"
                android:orderInCategory="100"
                android:title="@string/SaveGame"
                app:showAsAction="never" />
            <item
                android:id="@+id/LoadGame"
                android:orderInCategory="100"
                android:title="@string/LoadGame"
                app:showAsAction="never" />
            <item
                android:id="@+id/EndGame"
                android:orderInCategory="100"
                android:title="@string/EndGame"
                app:showAsAction="never" />

        </menu>
    </item>

    <item
        android:id="@+id/Settings"
        android:orderInCategory="100"
        android:title="@string/Options"
        app:showAsAction="never" />
    <item
        android:id="@+id/HighScores"
        android:orderInCategory="100"
        android:title="@string/HighScores"
        app:showAsAction="never" />
    <item
        android:id="@+id/About"
        android:orderInCategory="100"
        android:title="@string/About"
        app:showAsAction="never" />
</menu>