<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rect_rounded"
    android:focusable="false"
    android:focusableInTouchMode="false">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="100"
        android:background="@color/Trans"
        android:focusable="false"
        android:focusableInTouchMode="false">
        <ImageView
            android:id="@+id/SavePreview"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="10"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/rect_rounded"
            android:focusable="false"
            android:focusableInTouchMode="false"/>

        <CheckBox
            android:id="@+id/AutoSave"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="10"
            android:text="@string/AutoSave"
            android:focusable="false"
            android:focusableInTouchMode="false"
            >

        </CheckBox>>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/Date"
            android:id="@+id/DateTV"
            android:layout_weight="20"
            android:gravity="center_vertical"
            android:background="@color/Trans"
            android:textColor="@color/TableFore"
            android:textStyle="bold"
            android:focusable="false"
            android:focusableInTouchMode="false"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:text="@string/game_type"
            android:id="@+id/GameTypeTV"
            android:layout_weight="25"
            android:background="@color/Trans"
            android:gravity="center_vertical|right"
            android:textColor="@color/TableFore"
            android:textStyle="bold"
            android:focusable="false"
            android:focusableInTouchMode="false"/>

        <TextView android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:text="@string/play_time"
            android:id="@+id/PlayTimeTV"
            android:layout_weight="15"
            android:background="@color/Trans"
            android:gravity="center|center_vertical|right"
            android:textColor="@color/TableFore"
            android:textStyle="bold"
            android:focusable="false"
            android:focusableInTouchMode="false"/>

        <TextView android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:text="@string/score"
            android:id="@+id/ScoreTV"
            android:layout_weight="15"
            android:background="@color/Trans"
            android:gravity="center|center_vertical|right"
            android:textColor="@color/TableFore"
            android:buttonTint="@color/TableFore"
            android:textStyle="bold"
            android:focusable="false"
            android:focusableInTouchMode="false"/>

    </LinearLayout>

</LinearLayout>